# situps.space

./: .env.development  .env.production  .gitignore  README.md  TODO  index.html  package.json  room-protocol.drawio  vite.config.ts
mongodb-scripts/: fill-development-database.mongodb  fill-development-entries.mongodb  find-entries-for-day.mongodb  insert-development-rooms.mongodb  insert-development-users.mongodb  rename-field-user-id.mongodb  test-get-room-properties.mongodb  test-get-room-properties;.js
server/: .gitignore  Cargo.toml  app.py  config.example.json  requirements.txt
server.old/: .gitignore  app.py
server.old/config/: production.py
server/config/: development.py  production.py
server/config/local/: .gitignore
server/src/: api.rs  db.rs  entry_event.rs  main.rs  request.rs  schemes.rs
server/src/api/: base64_encoded_request.rs  get_room_properties.rs
src/: App.vue  main.ts  vite-env.d.ts
src/components/: Cell.vue  DayCard.vue  Grid.vue  UserDayInput.vue  WeekRow.vue
src/interface/: entry-key.ts  entry.ts  response.ts  schedule-date.ts  user.ts
src/model/: schedule-date-range-config.ts  schedule-date-range.ts  schedule-date.ts
src/scheme/: schedule-date.ts  user.ts
src/store/: entries-store.ts
